Compliance of the code with good coding practices AND Rewriting the configuration files for a better maintainability

--- a/install/.Bash-utils/config/modules/main/ColorsBG.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsBG.conf
@@ -39,7 +39,10 @@ function BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub()
 
 declare -i ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO;
 
+# -----------------------------
 # Aqua blue colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_AQUA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_AQUA}" '--no-function')" || {
@@ -66,6 +69,8 @@ __BU_MAIN_COLOR_BG_AQUA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # -------------------------
 # Black colored background.
+# -------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_BLACK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_BLACK}" '--no-function')" || {
@@ -92,6 +97,8 @@ __BU_MAIN_COLOR_BG_BLACK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
 # -----------------------------
 # Deep blue colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_BLUE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_BLUE}" '--no-function')" || {
@@ -118,6 +125,8 @@ __BU_MAIN_COLOR_BG_BLUE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # -----------------------------
 # Cyan blue colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_CYAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_CYAN}" '--no-function')" || {
@@ -144,6 +153,8 @@ __BU_MAIN_COLOR_BG_CYAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # ---------------------------
 # Fuchsia colored background.
+# ---------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_FUCHSIA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_FUCHSIA}" '--no-function')" || {
@@ -168,6 +179,8 @@ __BU_MAIN_COLOR_BG_FUCHSIA="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_C
 
 # ------------------------
 # Gray colored background.
+# ------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_GRAY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_GRAY}" '--no-function')" || {
@@ -196,6 +209,8 @@ __BU_MAIN_COLOR_BG_GRAY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # -------------------------------
 # Light green colored background.
+# -------------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_GREEN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_GREEN}" '--no-function')" || {
@@ -222,6 +237,8 @@ __BU_MAIN_COLOR_BG_GREEN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
 # ------------------------------
 # Lime green colored background.
+# ------------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_LIME="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_LIME}" '--no-function')" || {
@@ -247,6 +264,8 @@ __BU_MAIN_COLOR_BG_LIME="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # --------------------------
 # Marron colored background.
+# --------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_MAROON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_MAROON}" '--no-function')" || {
@@ -275,6 +294,8 @@ __BU_MAIN_COLOR_BG_MAROON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
 # -----------------------------
 # Navy blue colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_NAVY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_NAVY}" '--no-function')" || {
@@ -292,7 +313,7 @@ __BU_MAIN_COLOR_BG_NAVY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
     printf "%s" "${__BU_MAIN_COLOR_BG_NAVY}";
     printf "%s" "${__BU_MAIN_COLOR_TXT_WHITE}";
 
-    *BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_NAVY' "${__BU_MAIN_COLOR_BG_NAVY}" 'CMD' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_BG_NAVY' "${__BU_MAIN_COLOR_BG_NAVY}" 'CMD' \
         "$(BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub          "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COL_NAVY}" 'C')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" "${BASH_SOURCE[0]}" \
         "${FUNCNAME[0]}" "${____BU_MAIN_MOD_BG_COLOR_DEF_LINENO}";
@@ -301,6 +322,8 @@ __BU_MAIN_COLOR_BG_NAVY="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # -------------------------------
 # Green olive colored background.
+# -------------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_OLIVE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_OLIVE}" '--no-function')" || {
@@ -325,6 +348,8 @@ __BU_MAIN_COLOR_BG_OLIVE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_COD
 
 # --------------------------
 # Orange colored background.
+# --------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_ORANGE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_ORANGE}" '--no-function')" || {
@@ -352,6 +377,8 @@ __BU_MAIN_COLOR_BG_ORANGE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
 # ------------------------
 # Pink colored background.
+# ------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_PINK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_PINK}" '--no-function')" || {
@@ -377,6 +404,8 @@ __BU_MAIN_COLOR_BG_PINK="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # --------------------------
 # Purple colored background.
+# --------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_PURPLE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_PURPLE}" '--no-function')" || {
@@ -401,6 +430,8 @@ __BU_MAIN_COLOR_BG_PURPLE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
 # -----------------------------
 # Light red colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_RED="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_RED}" '--no-function')" || {
@@ -428,6 +459,8 @@ __BU_MAIN_COLOR_BG_RED="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
 # --------------------------
 # Salmon colored background.
+# --------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_SALMON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_SALMON}" '--no-function')" || {
@@ -451,6 +484,8 @@ __BU_MAIN_COLOR_BG_SALMON="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
 # -------------------------------
 # Silver gray colored background.
+# -------------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_SILVER="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_SILVER}" '--no-function')" || {
@@ -476,6 +511,8 @@ __BU_MAIN_COLOR_BG_SILVER="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
 # -----------------------------
 # Brown tan colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_TAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_TAN}" '--no-function')" || {
@@ -503,6 +540,8 @@ __BU_MAIN_COLOR_BG_TAN="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_
 
 # ------------------------
 # Teal colored background.
+# ------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_TEAL="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_TEAL}" '--no-function')" || {
@@ -526,6 +565,8 @@ __BU_MAIN_COLOR_BG_TEAL="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE
 
 # -----------------------------
 # Turquoise colored background.
+# -----------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_TURQUOISE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_TURQUOISE}" '--no-function')" || {
@@ -550,6 +591,8 @@ __BU_MAIN_COLOR_BG_TURQUOISE="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR
 
 # --------------------------
 # Violet colored background.
+# --------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_VIOLET="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_VIOLET}" '--no-function')" || {
@@ -577,6 +620,8 @@ __BU_MAIN_COLOR_BG_VIOLET="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CO
 
 # -------------------------
 # White colored background.
+# -------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_WHITE="$(BU.Main.TextFormat.SetBGColor "$__BU_MAIN_COLOR_CODE_WHITE" '--no-function')" || {
@@ -603,6 +648,8 @@ __BU_MAIN_COLOR_BG_WHITE="$(BU.Main.TextFormat.SetBGColor "$__BU_MAIN_COLOR_CODE
 
 # --------------------------------
 # Light yellow colored background.
+# --------------------------------
+
 ____BU_MAIN_MOD_BG_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_BG_YELLOW="$(BU.Main.TextFormat.SetBGColor "${__BU_MAIN_COLOR_CODE_YELLOW}" '--no-function')" || {
