--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -17,7 +17,7 @@
 function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription()
 {
     # shellcheck disable=SC2059
-    printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG" "$?";
+    printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__MAX_LENGHT_STR_MSG}" "${?}";
 }
 
 # -----------------------------------------------
@@ -42,7 +42,7 @@ if [ "${__BU_MAIN_FS_NAME,,}" == 'apfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription "Apple's APFS")" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -55,7 +55,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'btrfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'Btrfs')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -68,7 +68,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext2' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT2')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -81,7 +81,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext3' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT3')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -94,7 +94,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext4' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT4')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -107,7 +107,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'jfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'JFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -120,7 +120,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'xfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'XFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -133,7 +133,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'zfs' ]; then
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'ZFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
@@ -142,13 +142,14 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'zfs' ]; then
 
 else
     # shellcheck disable=SC2059
-    BU.Main.Errors.HandleSmallErrors 'W' "$(printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM" "${BASH_SOURCE[0]}" "$(( LINENO - 1 ))" "$(BU.Main.Decho.Decho.Highlight "$__BU_MAIN_FS_NAME")")" 'R';
+    BU.Main.Errors.HandleSmallErrors 'W' "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__UNSUPPORTED_FILESYSTEM}" \
+        "${BASH_SOURCE[0]}" "$(( LINENO - 2 ))" "$(BU.Main.Decho.Decho.Highlight "${__BU_MAIN_FS_NAME}")")" 'R';
 
     # File system max filename length.
     __BU_MAIN_FS_MAX_FILENAME_LENGTH='255';
 
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
-        "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH" \
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
+        "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH}" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 fi
