--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -20,7 +20,7 @@ function BU.Main.ModConfig.Colors.PrintRawColorCodeVarsName()
 {
     case "${2^^}" in
         'A')        printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintRawColorCodeVarsName_FNCT_A}" "${1}";;
-        'C' | *)    printf "$'__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintRawColorCodeVarsName_FNCT_C}" "${1}";;
+        'C' | *)    printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintRawColorCodeVarsName_FNCT_C}" "${1}";;
     esac
 }
 
