--- a/install/.Bash-utils/config/modules/main/ColorsText.conf
+++ b/install/.Bash-utils/config/modules/main/ColorsText.conf
@@ -45,6 +45,8 @@ declare -i ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO;
 
 # -----------------------
 # Aqua blue colored text.
+# -----------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_AQUA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_AQUA}" '--no-function')" || {
@@ -70,6 +72,8 @@ __BU_MAIN_COLOR_TXT_AQUA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # -------------------
 # Black colored text.
+# -------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_BLACK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_BLACK}" '--no-function')" || {
@@ -95,6 +99,8 @@ __BU_MAIN_COLOR_TXT_BLACK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
 # -----------------------
 # Deep blue colored text.
+# -----------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_BLUE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_BLUE}" '--no-function')" || {
@@ -120,8 +126,10 @@ __BU_MAIN_COLOR_TXT_BLUE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # -------
 
-# ----------------------
+# -----------------------
 # Cyan blue colored text.
+# ------------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_CYAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_CYAN}" '--no-function')" || {
@@ -147,6 +155,8 @@ __BU_MAIN_COLOR_TXT_CYAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # ---------------------
 # Fuchsia colored text.
+# ---------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_FUCHSIA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_FUCHSIA}" '--no-function')" || {
@@ -172,6 +182,8 @@ __BU_MAIN_COLOR_TXT_FUCHSIA="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLO
 
 # ------------------
 # Gray colored text.
+# ------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_GRAY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_GRAY}" '--no-function')" || {
@@ -199,6 +211,8 @@ __BU_MAIN_COLOR_TXT_GRAY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # -------------------------
 # Light green colored text.
+# -------------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_GREEN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_GREEN}" '--no-function')" || {
@@ -224,6 +238,8 @@ __BU_MAIN_COLOR_TXT_GREEN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
 # ------------------------
 # Lime green colored text.
+# ------------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_LIME="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_LIME}" '--no-function')" || {
@@ -249,6 +265,8 @@ __BU_MAIN_COLOR_TXT_LIME="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # --------------------
 # Maroon colored text.
+# --------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_MAROON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_MAROON}" '--no-function')" || {
@@ -276,6 +294,8 @@ __BU_MAIN_COLOR_TXT_MAROON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
 # -----------------------
 # Navy blue colored text.
+# -----------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_NAVY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_NAVY}" '--no-function')" || {
@@ -301,6 +321,8 @@ __BU_MAIN_COLOR_TXT_NAVY="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # -------------------------
 # Green olive colored text.
+# -------------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_OLIVE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_OLIVE}" '--no-function')" || {
@@ -326,6 +348,10 @@ __BU_MAIN_COLOR_TXT_OLIVE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
 # --------------------
 # Orange colored text.
+# --------------------
+
+____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
+
 __BU_MAIN_COLOR_TXT_ORANGE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_ORANGE}" '--no-function')" || {
     printf "%s\n" "${__BU_MAIN_COLOR_CODE_RESET}";
 
@@ -351,6 +377,8 @@ __BU_MAIN_COLOR_TXT_ORANGE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
 # ------------------
 # Pink colored text.
+# ------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_PINK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_PINK}" '--no-function')" || {
@@ -376,6 +404,8 @@ __BU_MAIN_COLOR_TXT_PINK="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # --------------------
 # Purple colored text.
+# --------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_PURPLE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_PURPLE}" '--no-function')" || {
@@ -401,6 +431,8 @@ __BU_MAIN_COLOR_TXT_PURPLE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
 # -----------------------
 # Light red colored text.
+# -----------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_RED="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_RED}" '--no-function')" || {
@@ -428,6 +460,8 @@ __BU_MAIN_COLOR_TXT_RED="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
 # --------------------
 # Salmon colored text.
+# --------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_SALMON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_SALMON}" '--no-function')" || {
@@ -453,6 +487,8 @@ __BU_MAIN_COLOR_TXT_SALMON="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
 # -------------------------
 # Silver gray colored text.
+# -------------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_SILVER="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_SILVER}" '--no-function')" || {
@@ -478,6 +514,8 @@ __BU_MAIN_COLOR_TXT_SILVER="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
 # -----------------------
 # Brown tan colored text.
+# -----------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_TAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_TAN}" '--no-function')" || {
@@ -505,6 +543,8 @@ __BU_MAIN_COLOR_TXT_TAN="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CO
 
 # ------------------
 # Teal colored text.
+# ------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_TEAL="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_TEAL}" '--no-function')" || {
@@ -530,6 +570,8 @@ __BU_MAIN_COLOR_TXT_TEAL="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_C
 
 # -----------------------
 # Turquoise colored text.
+# -----------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_TURQUOISE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_TURQUOISE}" '--no-function')" || {
@@ -555,6 +597,8 @@ __BU_MAIN_COLOR_TXT_TURQUOISE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_CO
 
 # --------------------
 # Violet colored text.
+# --------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_VIOLET="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_VIOLET}" '--no-function')" || {
@@ -582,6 +626,8 @@ __BU_MAIN_COLOR_TXT_VIOLET="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR
 
 # -------------------
 # White colored text.
+# -------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_WHITE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_WHITE}" '--no-function')" || {
@@ -607,6 +653,8 @@ __BU_MAIN_COLOR_TXT_WHITE="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_
 
 # --------------------------
 # Light yellow colored text.
+# --------------------------
+
 ____BU_MAIN_MOD_TEXT_COLOR_DEF_LINENO="$(( LINENO + 2 ))";
 
 __BU_MAIN_COLOR_TXT_YELLOW="$(BU.Main.TextFormat.SetTextColor "${__BU_MAIN_COLOR_CODE_YELLOW}" '--no-function')" || {
