Removed some basenames and worked on the pre-translation messages in the initializer script

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -45,7 +45,7 @@ if [ "${__BU_MAIN_FS_NAME,,}" == 'apfs' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription "Apple's APFS")" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -58,7 +58,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'btrfs' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'Btrfs')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -71,7 +71,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext2' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT2')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -84,7 +84,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext3' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT3')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -97,7 +97,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'ext4' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT4')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -110,7 +110,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'jfs' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'JFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -123,7 +123,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'xfs' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'XFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -136,7 +136,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" == 'zfs' ]; then
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'ZFS')" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -151,5 +151,5 @@ else
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "${__BU_MAIN_FS_MAX_FILENAME_LENGTH}" 'Int' \
         "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH}" \
         "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
+        "${BASH_SOURCE[0]}" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 fi
