Compliance of the code with good coding practices AND Rewriting the configuration files for a better maintainability

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -51,7 +51,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -78,7 +78,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -104,7 +104,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -131,7 +131,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -158,7 +158,7 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -197,7 +197,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -222,7 +222,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
 
@@ -249,7 +249,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -276,7 +276,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -303,7 +303,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -329,7 +329,7 @@ function BU.Main.ModConfig.Module.BUDevToolsPaths()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -368,7 +368,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -394,7 +394,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -420,7 +420,7 @@ function BU.Main.ModConfig.Module.BULibFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -463,7 +463,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -490,7 +490,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -517,7 +517,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -544,7 +544,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -570,7 +570,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1; return 1;
     };
@@ -810,7 +810,7 @@ else
 
             BU.ModuleInit.MsgAbort;
 
-            BU.ModuleInit.AskPrintLog;
+            BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
             BU.ModuleInit.IsInScript && exit 1;
 
@@ -833,7 +833,7 @@ else
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1;
 
@@ -859,7 +859,7 @@ else
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1;
 
@@ -880,7 +880,7 @@ else
 
         BU.ModuleInit.MsgAbort;
 
-        BU.ModuleInit.AskPrintLog;
+        BU.ModuleInit.AskPrintLog >&2 || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
 
         BU.ModuleInit.IsInScript && exit 1;
 
