--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -32,9 +32,9 @@
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
 __BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %H:%M:%S")";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "$__BU_MAIN_TIME_DATE" 'CMD' \
-	"$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE"  \
-	"$__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "${__BU_MAIN_TIME_DATE}" 'CMD' \
+	"${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE}"  \
+	"${__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -50,9 +50,9 @@ v_time_conf_date_display_color_1="$(tput setaf 78)";
 v_time_conf_date_display_color_2="$(tput setaf 111)";
 v_time_conf_date_display_color_3="$(tput setaf 78)";
 
-__BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "$v_time_conf_date_display_color_1" "[ $v_time_conf_date_display_color_2$__BU_MAIN_TIME_DATE$v_time_conf_date_display_color_3 ]\033[0m")";
+__BU_MAIN_TIME_DATE_DISPLAY="$(echo -ne "${v_time_conf_date_display_color_1}" "[ ${v_time_conf_date_display_color_2}${__BU_MAIN_TIME_DATE}${v_time_conf_date_display_color_3} ]\033[0m")";
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "$__BU_MAIN_TIME_DATE_DISPLAY" 'CMD' \
-	"$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE_DISPLAY" \
-	"$__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE_DISPLAY' "${__BU_MAIN_TIME_DATE_DISPLAY}" 'CMD' \
+	"${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TIME__BU_MAIN_TIME_DATE_DISPLAY}" \
+	"${__BU_MU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
 	"${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
