--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -43,7 +43,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TIME_DATE' "${__BU_MAIN_TIME
 
 # Displaying the current date YYYYY-MM-DD hh:mm:ss format (YEAR-MONTH-DAY hour-minute-second) with a colored text (for a better view in the log file).
 
-# Unlike the "$__BU_MODULES_UNIT_DATE_LOG" global variable, this log entry displays colors.
+# Unlike the "${__BU_MODULES_UNIT_DATE_LOG}" global variable, this log entry displays colors.
 
 # Declaring the variables which contains the color codes.
 v_time_conf_date_display_color_1="$(tput setaf 78)";
